<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        style="@android:attr/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadLabel" />

    <EditText
        android:id="@+id/filePathText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filepath_separator_prompt"
        android:text="@string/DEFAULT_FILE_PATH" 
        style="@android:attr/label"/>

    <TextView
        style="@android:attr/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/separator_label" 
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/separatorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/separator_hint"
        android:singleLine="true"
        android:text="@string/SEPARATOR" 
        android:layout_marginBottom="25dp"
        android:maxLength="1"
        style="@android:attr/label" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/uploadButton"
            style="@android:attr/buttonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonUpload" />

        <Button
            android:id="@+id/buttonCancel"
            style="@android:attr/buttonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonCancel" />
    </LinearLayout>
	<LinearLayout
            android:id="@+id/uploadResultLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginTop="10dp">
    </LinearLayout>
</LinearLayout>