<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DictionaryActivity" >

    <EditText
        android:id="@+id/wordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/wordTextHint"
        android:singleLine="true" 
        android:maxLength="50">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/definitionText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wordText"
        android:gravity="top"
        android:hint="@string/definitionTextHint"
        android:maxLines="3"
        android:overScrollMode="ifContentScrolls"
        android:singleLine="false" 
        android:maxLength="500"/>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/definitionText" >

        <Button
            android:id="@+id/lookupButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lookupButtonLabel" />

        <Button
            android:id="@+id/defineButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defineButtonLabel" />
    </LinearLayout>

    <View
        android:id="@+id/lineSeparator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/buttonsLayout"
        android:background="@android:color/darker_gray"
        android:paddingTop="15dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/lineSeparator" >

        <LinearLayout
            android:id="@+id/definitionLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</RelativeLayout>